--- a/addon/plugins/org.eclipse.viatra.addon.viewers.runtime/plugin.xml
+++ b/addon/plugins/org.eclipse.viatra.addon.viewers.runtime/plugin.xml
@@ -29,6 +29,11 @@
     </annotation>
   </extension>
   <extension id="org.eclipse.viatra.addon.viewers.runtime.model.patterns.ViewersTraceabilityQueries" point="org.eclipse.viatra.query.runtime.queryspecification">
-    <group group="org.eclipse.viatra.query.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.addon.viewers.runtime.model.patterns.ViewersTraceabilityQueries" id="org.eclipse.viatra.addon.viewers.runtime.model.patterns.ViewersTraceabilityQueries"/>
+    <group group="org.eclipse.viatra.query.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.addon.viewers.runtime.model.patterns.ViewersTraceabilityQueries" id="org.eclipse.viatra.addon.viewers.runtime.model.patterns.ViewersTraceabilityQueries">
+      <query-specification fqn="org.eclipse.viatra.addon.viewers.runtime.model.patterns.param2item"/>
+      <query-specification fqn="org.eclipse.viatra.addon.viewers.runtime.model.patterns.param2edge"/>
+      <query-specification fqn="org.eclipse.viatra.addon.viewers.runtime.model.patterns.param2containment"/>
+      <query-specification fqn="org.eclipse.viatra.addon.viewers.runtime.model.patterns.children"/>
+    </group>
   </extension>
 </plugin>
