--- a/cep/plugins/org.eclipse.viatra.cep.core.metamodels/plugin.xml
+++ b/cep/plugins/org.eclipse.viatra.cep.core.metamodels/plugin.xml
@@ -25,6 +25,11 @@
     <wellbehaving-derived-feature classifier-name="Automaton" feature-name="initialState" package-nsUri="automaton.meta"/>
   </extension>
   <extension id="org.eclipse.viatra.cep.core.metamodels.derived.DerivedFeatures" point="org.eclipse.viatra.query.runtime.queryspecification">
-    <group group="org.eclipse.viatra.query.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.cep.core.metamodels.derived.DerivedFeatures" id="org.eclipse.viatra.cep.core.metamodels.derived.DerivedFeatures"/>
+    <group group="org.eclipse.viatra.query.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.cep.core.metamodels.derived.DerivedFeatures" id="org.eclipse.viatra.cep.core.metamodels.derived.DerivedFeatures">
+      <query-specification fqn="org.eclipse.viatra.cep.core.metamodels.derived.initialState"/>
+      <query-specification fqn="org.eclipse.viatra.cep.core.metamodels.derived.finalStates"/>
+      <query-specification fqn="org.eclipse.viatra.cep.core.metamodels.derived.trapState"/>
+      <query-specification fqn="org.eclipse.viatra.cep.core.metamodels.derived.eventTokensInModel"/>
+    </group>
   </extension>
 </plugin>
