[494541] define Transformation Development perspective
Change-Id: I69c37a0d63455faf9d03788f8e699cfe81871590
Signed-off-by: Abel Hegedus <abel.hegedus@incquerylabs.com>

--- a/addon/plugins/org.eclipse.viatra.addon.viewers.tooling.ui/plugin.xml
+++ b/addon/plugins/org.eclipse.viatra.addon.viewers.tooling.ui/plugin.xml
@@ -106,5 +106,21 @@
       		implementation="org.eclipse.viatra.addon.viewers.tooling.ui.views.tabs.TreeViewerSandboxTab">
       </tab>
    </extension>
+   <extension
+         point="org.eclipse.ui.perspectiveExtensions">
+      <perspectiveExtension
+            targetID="org.eclipse.viatra.query.tooling.ui.TransformationDevPerspective">
+         <view
+               id="org.eclipse.viatra.addon.viewers.tooling.ui.sandbox"
+               minimized="false"
+               relationship="stack"
+               relative="org.eclipse.ui.views.ContentOutline"
+               visible="false">
+         </view>
+         <viewShortcut
+               id="org.eclipse.viatra.addon.viewers.tooling.ui.sandbox">
+         </viewShortcut>
+      </perspectiveExtension>
+   </extension>
 
 </plugin>
