--- a/query/plugins/org.eclipse.viatra.query.tooling.ui.retevis/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.ui.retevis/plugin.xml
@@ -36,4 +36,20 @@
       <keywordReference id="org.eclipse.viatra.query.patternlanguage.emf.ui.keyword_EMFPatternLanguage"/>
     </page>
   </extension>
+  <extension
+        point="org.eclipse.ui.perspectiveExtensions">
+     <perspectiveExtension
+           targetID="org.eclipse.viatra.query.tooling.ui.TransformationDevPerspective">
+        <view
+              id="org.eclipse.viatra.query.tooling.ui.retevis.views.ReteVisualizer"
+              minimized="false"
+              relationship="stack"
+              relative="org.eclipse.ui.views.ContentOutline"
+              visible="false">
+        </view>
+        <viewShortcut
+              id="org.eclipse.viatra.query.tooling.ui.retevis.views.ReteVisualizer">
+        </viewShortcut>
+     </perspectiveExtension>
+  </extension>
 </plugin>
