--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -17,7 +17,7 @@
 		<maven.compiler.showWarnings>true</maven.compiler.showWarnings>
 		<jacoco.version>0.7.6.201602180812</jacoco.version>
 		<jacoco.targetdir>${project.basedir}/../../jacoco</jacoco.targetdir>
-		<xtend.compiler.version>2.10.0-SNAPSHOT</xtend.compiler.version>
+		<xtend.compiler.version>2.10.0</xtend.compiler.version>
 		<java.version>1.7</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
@@ -174,25 +174,25 @@
 		<url>${eclipse.bugzillaUrl}</url>
 		<system>Bugzilla</system>
 	</issueManagement>
-	<repositories>
+	<!-- <repositories>
 	    <repository>
             <id>sonatype-snapshots</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
             <releases><enabled>false</enabled></releases>
             <snapshots><enabled>true</enabled></snapshots>
         </repository>
-	</repositories>
+	</repositories>-->
 	<pluginRepositories>
 		<pluginRepository>
 			<id>cbi-releases</id>
 			<url>https://repo.eclipse.org/content/repositories/cbi-releases/</url>
 		</pluginRepository>
-		<pluginRepository>
+		<!-- <pluginRepository>
             <id>sonatype-snapshots</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
             <releases><enabled>false</enabled></releases>
             <snapshots><enabled>true</enabled></snapshots>
-        </pluginRepository>
+        </pluginRepository>-->
 	</pluginRepositories>
 	<profiles>
 		<profile>
