[495123] Made maven repository urls properties
This should allow build jobs to retarget builds into a staging
repository.

--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -27,6 +27,9 @@
 		<!-- Composite site related properties -->
 		<viatra.updates.dir>updates</viatra.updates.dir>
 		<viatra.download.area>target/composite</viatra.download.area>
+        <!-- Maven deploy related properties-->
+        <viatra.deploy.release>https://repo.eclipse.org/content/repositories/viatra2-releases/</viatra.deploy.release>
+        <viatra.deploy.snapshot>https://repo.eclipse.org/content/repositories/viatra2-snapshots/</viatra.deploy.snapshot>
 	</properties>
 	<build>
 		<plugins>
@@ -163,18 +166,18 @@
 			</plugins>
 		</pluginManagement>
 	</build>
-	<distributionManagement>
-		<repository>
-			<id>repo.eclipse.org</id>
-			<name>VIATRA Project Repository - Releases</name>
-			<url>https://repo.eclipse.org/content/repositories/viatra2-releases/</url>
-		</repository>
-		<snapshotRepository>
-			<id>repo.eclipse.org</id>
-			<name>VIATRA Project Repository - Snapshots</name>
-			<url>https://repo.eclipse.org/content/repositories/viatra2-snapshots/</url>
-		</snapshotRepository>
-	</distributionManagement>
+    <distributionManagement>
+        <repository>
+            <id>repo.eclipse.org</id>
+            <name>VIATRA Project Repository - Releases</name>
+            <url>${viatra.deploy.release}</url>
+        </repository>
+        <snapshotRepository>
+            <id>repo.eclipse.org</id>
+            <name>VIATRA Project Repository - Snapshots</name>
+            <url>${viatra.deploy.snapshot}</url>
+        </snapshotRepository>
+    </distributionManagement>
 	<scm>
 		<connection>${tycho.scmUrl}</connection>
 		<url>http://git.eclipse.org/c/viatra/org.eclipse.viatra.git/</url>
