--- a/releng/org.eclipse.viatra.parent.core/pom.xml
+++ b/releng/org.eclipse.viatra.parent.core/pom.xml
@@ -5,6 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>org.eclipse.viatra.parent.core</artifactId>
 	<name>VIATRA Core Plug-ins</name>
+	<version>1.2.1-SNAPSHOT</version>
 	<url>http://eclipse.org/viatra</url>
 	<packaging>pom</packaging>
 	<modules>
@@ -49,7 +50,7 @@
                         <artifact>
                             <groupId>org.eclipse.viatra</groupId>
                             <artifactId>org.eclipse.viatra.target.core</artifactId>
-                            <version>${viatra.main.version}</version>
+                            <version>${project.version}</version>
                         </artifact>
                         <dependency-resolution>
                         <extraRequirements>
