--- a/addon/features/org.eclipse.viatra.addon.viewers.runtime.zest.feature/pom.xml
+++ b/addon/features/org.eclipse.viatra.addon.viewers.runtime.zest.feature/pom.xml
@@ -4,10 +4,10 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-        <artifactId>org.eclipse.viatra.parent.all</artifactId>
+        <artifactId>org.eclipse.viatra.parent.incubation</artifactId>
         <groupId>org.eclipse.viatra</groupId>
-        <version>1.3.0-SNAPSHOT</version>
-        <relativePath>../../../releng/org.eclipse.viatra.parent.all/pom.xml</relativePath>
+        <version>0.13.0-SNAPSHOT</version>
+        <relativePath>../../../releng/org.eclipse.viatra.parent.incubation/pom.xml</relativePath>
     </parent>
 	<artifactId>org.eclipse.viatra.addon.viewers.runtime.zest.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
@@ -50,5 +50,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	<version>0.13.0-SNAPSHOT</version>
 </project>
