--- a/cep/plugins/org.eclipse.viatra.cep.emf.notification/pom.xml
+++ b/cep/plugins/org.eclipse.viatra.cep.emf.notification/pom.xml
@@ -3,10 +3,10 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-        <artifactId>org.eclipse.viatra.parent.all</artifactId>
+        <artifactId>org.eclipse.viatra.parent.incubation</artifactId>
         <groupId>org.eclipse.viatra</groupId>
-        <version>1.3.0-SNAPSHOT</version>
-        <relativePath>../../../releng/org.eclipse.viatra.parent.all/pom.xml</relativePath>
+        <version>0.13.0-SNAPSHOT</version>
+        <relativePath>../../../releng/org.eclipse.viatra.parent.incubation/pom.xml</relativePath>
     </parent>
   <artifactId>org.eclipse.viatra.cep.emf.notification</artifactId>
   <packaging>eclipse-plugin</packaging>
@@ -20,5 +20,4 @@
 			</resource>
 		</resources>
 	</build>
-	<version>0.13.0-SNAPSHOT</version>
 </project>
