--- a/dse/plugins/org.eclipse.viatra.dse.base/pom.xml
+++ b/dse/plugins/org.eclipse.viatra.dse.base/pom.xml
@@ -4,19 +4,11 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>org.eclipse.viatra.parent.all</artifactId>
+		<artifactId>org.eclipse.viatra.parent.incubation</artifactId>
 		<groupId>org.eclipse.viatra</groupId>
-		<version>1.3.0-SNAPSHOT</version>
-		<relativePath>../../../releng/org.eclipse.viatra.parent.all/pom.xml</relativePath>
+		<version>0.13.0-SNAPSHOT</version>
+		<relativePath>../../../releng/org.eclipse.viatra.parent.incubation/pom.xml</relativePath>
 	</parent>
 	<artifactId>org.eclipse.viatra.dse.base</artifactId>
 	<packaging>eclipse-plugin</packaging>
-	<build>
-		<resources>
-			<resource>
-				<directory>src</directory>
-			</resource>
-		</resources>
-	</build>
-	<version>0.13.0-SNAPSHOT</version>
 </project>
