--- a/integration/plugins/org.eclipse.viatra.integration.graphiti/pom.xml
+++ b/integration/plugins/org.eclipse.viatra.integration.graphiti/pom.xml
@@ -3,12 +3,11 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-        <artifactId>org.eclipse.viatra.parent.all</artifactId>
+        <artifactId>org.eclipse.viatra.parent.incubation</artifactId>
         <groupId>org.eclipse.viatra</groupId>
-        <version>1.3.0-SNAPSHOT</version>
-        <relativePath>../../../releng/org.eclipse.viatra.parent.all/pom.xml</relativePath>
+        <version>0.13.0-SNAPSHOT</version>
+        <relativePath>../../../releng/org.eclipse.viatra.parent.incubation/pom.xml</relativePath>
     </parent>
   <artifactId>org.eclipse.viatra.integration.graphiti</artifactId>
   <packaging>eclipse-plugin</packaging>
-  <version>0.13.0-SNAPSHOT</version>
 </project>
