--- a/releng/org.eclipse.viatra.parent.all/pom.xml
+++ b/releng/org.eclipse.viatra.parent.all/pom.xml
@@ -5,6 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>org.eclipse.viatra.parent.all</artifactId>
 	<name>VIATRA Eclipse plug-in</name>
+	<version>1.3.0-SNAPSHOT</version>
 	<url>http://eclipse.org/viatra</url>
 	<packaging>pom</packaging>
 	<modules>
@@ -13,7 +14,7 @@
 		<module>../../releng/org.eclipse.viatra.update</module>
 		<module>../../releng/org.eclipse.viatra.docs</module>
 		<module>../../releng/org.eclipse.viatra.rcpproduct</module>
-		
+		<module>../../releng/org.eclipse.viatra.parent.incubation</module>
 
 		<!-- Query -->
 		<module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.ui</module>
@@ -22,8 +23,6 @@
 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.generator.model.ui</module>
 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.core</module>
 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.ui</module>
-		<module>../../query/plugins/org.eclipse.viatra.query.tooling.localsearch.ui</module>
-		<module>../../query/plugins/org.eclipse.viatra.query.tooling.ui.retevis</module>
 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.debug</module>
 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.migrator</module>
 		<module>../../query/tests/org.eclipse.viatra.query.patternlanguage.tests</module>
@@ -36,42 +35,12 @@
 		<module>../../query/tests/org.eclipse.viatra.query.testing.core</module>
 		<module>../../query/tests/org.eclipse.viatra.query.testing.ui</module>
 		<module>../../query/features/org.eclipse.viatra.query.testing.sdk.feature</module>
-		<module>../../query/features/org.eclipse.viatra.query.tooling.ui.visualization.feature</module>
 		<module>../../query/features/org.eclipse.viatra.query.sdk.feature</module>
 
 		<!-- Transformations -->
 		<module>../../transformation/plugins/org.eclipse.viatra.transformation.ui</module>
 		<module>../../transformation/plugins/org.eclipse.viatra.transformation.evm.transactions</module>
-		<module>../../transformation/plugins/org.eclipse.viatra.transformation.views</module>
-		<module>../../transformation/plugins/org.eclipse.viatra.transformation.debug</module>
-		<module>../../transformation/plugins/org.eclipse.viatra.transformation.debug.ui</module>
-		<module>../../transformation/plugins/org.eclipse.viatra.transformation.debug.transformationtrace</module>
-		<module>../../transformation/plugins/org.eclipse.viatra.transformation.tracer</module>
 		<module>../../transformation/features/org.eclipse.viatra.transformation.evm.transactions.feature</module>
-		<module>../../transformation/features/org.eclipse.viatra.transformation.debug.feature</module>
-		
-		
-
-		<!-- CEP -->
-		<module>../../cep/plugins/org.eclipse.viatra.cep.core</module>
-		<module>../../cep/plugins/org.eclipse.viatra.cep.core.metamodels</module>
-		<module>../../cep/plugins/org.eclipse.viatra.cep.emf.notification</module>
-		<module>../../cep/plugins/org.eclipse.viatra.cep.tooling.core</module>
-		<module>../../cep/plugins/org.eclipse.viatra.cep.tooling.ui</module>
-		<module>../../cep/plugins/org.eclipse.viatra.cep.vepl</module>
-		<module>../../cep/plugins/org.eclipse.viatra.cep.vepl.ui</module>
-		<module>../../cep/tests/org.eclipse.viatra.cep.core.tests.compiler</module>
-		<module>../../cep/tests/org.eclipse.viatra.cep.core.tests.compiler.testdata</module>
-		<module>../../cep/tests/org.eclipse.viatra.cep.vepl.tests</module>
-		<module>../../cep/tests/org.eclipse.viatra.cep.tests.integration</module>
-		<module>../../cep/features/org.eclipse.viatra.cep.feature</module>
-
-		<!-- DSE -->
-		<module>../../dse/plugins/org.eclipse.viatra.dse.base</module>
-		<module>../../dse/plugins/org.eclipse.viatra.dse.api</module>
-		<module>../../dse/plugins/org.eclipse.viatra.dse.designspace</module>
-		<module>../../dse/plugins/org.eclipse.viatra.dse.genetic</module>
-		<module>../../dse/features/org.eclipse.viatra.dse.feature</module>
 
 		<!-- Addons -->
 		<module>../../addon/plugins/org.eclipse.viatra.addon.databinding.runtime</module>
@@ -81,29 +50,15 @@
 		<module>../../addon/plugins/org.eclipse.viatra.addon.validation.runtime</module>
 		<module>../../addon/plugins/org.eclipse.viatra.addon.validation.runtime.ui</module>
 		<module>../../addon/plugins/org.eclipse.viatra.addon.validation.tooling</module>
-		<module>../../addon/plugins/org.eclipse.viatra.addon.viewers.runtime</module>
-		<module>../../addon/plugins/org.eclipse.viatra.addon.viewers.tooling.ui</module>
-		<module>../../addon/plugins/org.eclipse.viatra.addon.viewers.runtime.zest</module>
-		<module>../../addon/plugins/org.eclipse.viatra.addon.viewers.tooling.ui.zest</module>
 		<module>../../addon/features/org.eclipse.viatra.addon.querybasedfeatures.runtime.feature</module>
 		<module>../../addon/features/org.eclipse.viatra.addon.databinding.runtime.feature</module>
 		<module>../../addon/features/org.eclipse.viatra.addon.validation.runtime.feature</module>
-		<module>../../addon/features/org.eclipse.viatra.addon.viewers.runtime.feature</module>
-		<module>../../addon/features/org.eclipse.viatra.addon.viewers.runtime.zest.feature</module>
-		<module>../../addon/features/org.eclipse.viatra.addon.viewers.tooling.feature</module>
 
 		<!-- Integration -->
-		<module>../../integration/plugins/org.eclipse.viatra.integration.graphiti</module>
 		<module>../../integration/plugins/org.eclipse.viatra.integration.gmf</module>
-		<module>../../integration/plugins/org.eclipse.viatra.integration.modisco</module>
-		<module>../../integration/plugins/org.eclipse.viatra.integration.mwe2</module>
 		<module>../../integration/plugins/org.eclipse.viatra.integration.uml</module>
-		<module>../../integration/features/org.eclipse.viatra.integration.modisco.feature</module>
-		<module>../../integration/tests/org.eclipse.viatra.integration.mwe2.test</module>
 		<module>../../integration/tests/org.eclipse.viatra.integration.uml.test</module>
 		<module>../../integration/features/org.eclipse.viatra.integration.gmf.feature</module>
-		<module>../../integration/features/org.eclipse.viatra.integration.graphiti.feature</module>
-		<module>../../integration/features/org.eclipse.viatra.integration.mwe2.feature</module>
 		<module>../../integration/features/org.eclipse.viatra.integration.uml.feature</module>
 
 	</modules>
@@ -161,23 +116,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	<profiles>
-		<profile>
-			<id>xcore</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-				<property>
-					<name>xcore.integration</name>
-				</property>
-			</activation>
-			<modules>
-				<module>../../integration/plugins/org.eclipse.viatra.integration.xcore.model</module>
-				<module>../../integration/plugins/org.eclipse.viatra.integration.xcore</module>
-				<module>../../integration/plugins/org.eclipse.viatra.integration.xcore.modeleditor</module>
-				<module>../../integration/plugins/org.eclipse.viatra.integration.xcore.ui</module>
-				<module>../../integration/features/org.eclipse.viatra.integration.xcore.feature</module>
-			</modules>
-		</profile>
-	</profiles>
-<version>1.3.0-SNAPSHOT</version>
 </project>
