--- a/releng/org.eclipse.viatra.parent.core/pom.xml
+++ b/releng/org.eclipse.viatra.parent.core/pom.xml
@@ -5,6 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>org.eclipse.viatra.parent.core</artifactId>
 	<name>VIATRA Core Plug-ins</name>
+	<version>1.3.0-SNAPSHOT</version>
 	<url>http://eclipse.org/viatra</url>
 	<packaging>pom</packaging>
 	<modules>
@@ -65,6 +66,18 @@
                 </configuration>
             </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+               <plugin>
+                   <groupId>org.eclipse.tycho</groupId>
+                   <artifactId>tycho-versions-plugin</artifactId>
+                   <version>${tycho.version}</version>
+                   <configuration>
+                     <artifacts>org.eclipse.viatra.parent,org.eclipse.viatra.parent.core</artifacts>
+                     <properties>viatra.main.version</properties>
+                   </configuration>
+               </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
-<version>1.3.0-SNAPSHOT</version>
 </project>
